# butterbrot_rs

./: .gitignore  Cargo.toml  README.md  honk5.birb
data_sets/: birb2bmp  birb_NJRM.birb  honk.birb  honk2.birb  honk3.birb  honk4-the_good_one.birb  honk6.birb
src/: TODO.txt  birb2bmp.rs  birb2term.rs  birb_OBIB.birb  birb_combinator.rs  butterbrot.rs  main.rs  tt.rs
src/lib/: args_parser_macro.rs  birb.birb  butterbrot.rs  foo.birb  helptext.txt  io.rs  m.rs  math.rs  mod.rs
