[package]
name = "butterbrot_rs"
version = "0.1.0"
authors = ["HegemonsHerald <benediktheinen1@gmail.com>"]
edition = "2018"

[dependencies]
rand  = "0.6.5"
rayon = "1.0.3"

[[bin]]
name = "butterbrot_rs"
path = "src/butterbrot.rs"

[[bin]]
name = "birb2term_rs"
path = "src/birb2term.rs"

[[bin]]
name = "birb_combinator"
path = "src/birb_combinator.rs"
